# python-filestate-dev

./: README.md  pyproject.toml  requirements.in  requirements.txt
.wex/: config.yml
.wex/python/: .last-commit
.wex/python/app_manager/: requirements.txt
src/wexample_filestate_dev/helpers/: dependencies.py
src/wexample_filestate_dev/workdir/mixins/: with_readme_workdir_mixin.py  with_version_workdir_mixin.py
wexample_filestate_dev/helpers/: dependencies.py
wexample_filestate_dev/workdir/: framework_package_workdir.py  framework_packages_suite_workdir.py
wexample_filestate_dev/workdir/mixins/: with_readme_workdir_mixin.py  with_version_workdir_mixin.py
