[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wexample-filestate-dev"
version = "0.0.1"
description = "Some python basic helpers."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "weeger", email = "contact@wexample.com" }]
license = { text = "MIT" }
requires-python = ">=3.6"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pip-tools",
    "pydantic",
    "pytest",
    "wexample-filestate"
]

[project.urls]
homepage = "https://github.com/wexample/python-filestate-dev"
