[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-dev"
version = "0.0.34"
description = "Some python basic helpers."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "wexample-filestate==0.0.46",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate-dev"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm.build]
includes = [
    "src/wexample_filestate_dev/py.typed",
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate_dev"
from = "src"
